# bls-predict

./: .gitignore  Bilinear Least-Squares.ipynb  bls_predict.py  pyproject.toml
tests/: test_bls.py
