[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bls-predict"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "True Merrill", email = "truemerrill@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy"]

[project.optional-dependencies]
test = [
  "pytest"
]
dev = [
  "pytest",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python"
]

[project.urls]
Documentation = "https://truemerrill.github.io/bls-predict"
Issues = "https://github.com/truemerrill/bls-predict/issues"
Source = "https://github.com/truemerrill/bls-predict"

[tool.hatch.version]
path = "bls_predict.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:bls_predict tests}"

[tool.coverage.run]
source_pkgs = ["bls_predict", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
bls_predict = ["bls_predict"]
tests = ["tests", "*/bls-predict/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.flake8]
